# tiny_renderer

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Triangle.cpp  Triangle.h
test/: CMakeLists.txt  UnitTest.cpp
